--- a/user/pom.xml
+++ b/user/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.pitest</groupId>
+			<artifactId>pitest-junit5-plugin</artifactId>
+			<version>1.2.1</version> <!-- compatible avec pitest 1.15.x -->
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -62,6 +67,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>1.15.2</version> <!-- vérifie la dernière version sur https://search.maven.org -->
+				<configuration>
+					<targetClasses>
+						<param>com.azucher.user.*</param> <!-- Mets ici le package de ton code à tester -->
+					</targetClasses>
+					<targetTests>
+						<param>com.azucher.user.*</param> <!-- Mets ici le package des tests -->
+					</targetTests>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
